# gpdftext

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.transifex  autogen.sh  configure.ac  gpdftext.desktop.in  gpdftext.doap  manpage.xml
data/: Makefile.am  gpdftext.desktop.in  gpdftext.schemas.in  gpdftext.xml  gpdftext.xpm
debian/: changelog  control  copyright  docs  menu  rules  svn-deblayout  watch
help/: ChangeLog  Makefile.am  README.transifex  gpdftext.omf.in
help/C/: gpdftext.xml  legal.xml
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/it/: it.po
help/pt/: pt.po
help/ru/: ru.po
help/sv/: sv.po
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  cs.po  de.po  es.po  it.po  pl.po  pt.po  ru.po  sv.po  uk.po  vi.po  zh_CN.po
src/: Makefile.am  callbacks.c  callbacks.h  ebookui.c  ebookui.h  gpdftext.glade  main.c  pdf.c  pdf.h  spell.c  spell.h
